# TopologyEngine

./: .bazelrc  .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  MODULE.bazel  README.md  imgui.ini  vcpkg.json
Docs/: v001_01-ECS.md  v001_02-TaskGraph.puml  v001_03-TEventCount.puml
Engine/: MODULE.bazel
Engine/Documentation/: v001_01-ECS.md  v001_02-TaskGraph.md  v001_02-TaskGraph.puml  v001_04-Self.puml
Engine/Include/Benchmark/graph_traversal/: levelgraph.hpp
Engine/Include/Comps/: CameraComp.hpp  InputComp.hpp  TransformComp.hpp
Engine/Include/Comps/Sys/: CameraSysComp.hpp  InputSysComp.hpp
Engine/Include/Core/: CoreTypes.hpp  Engine.hpp
Engine/Include/ECS/: CompArray.hpp  CompCache.hpp  CompManager.hpp  CompType.hpp  ECSCore.hpp  ECSCore.inl  EntityManager.hpp  EntityTypes.hpp  JobManager.hpp  JobManagerProxy.hpp  JobType.hpp  System.hpp  SystemManager.hpp
Engine/Include/HAL/: ENamedThreads.hpp  FBaseGraphTask.hpp  FEvent.hpp  FGraphEventRef.hpp  FNamedTaskThread.hpp  FRunnable.hpp  FRunnableThread.hpp  FTaskGraphInterface.hpp  IQueuedWork.hpp  QueuedThreadPool.hpp  TGraphTask.hpp
Engine/Include/Systems/: CameraSystem.hpp  InputSystem.hpp
Engine/Include/Utils/: Check.hpp  DepGraph.hpp  Log.hpp  Settings.hpp  ThreadPool.hpp
Engine/Runtime/Core/: BUILD
Engine/Runtime/Core/Private/Thread/: ThreadPool_linux.cpp  ThreadPool_win.cpp
Engine/Runtime/Core/Public/DebugUtils/: CoreDebug.hpp
Engine/Runtime/Core/Public/MarcoUtils/: AssertMarco.hpp  CoreMarco.hpp  PlatformMarco.hpp  StringMarco.hpp
Engine/Runtime/Core/Public/Memory/: RefCounting.hpp
Engine/Runtime/Core/Public/Strings/: CoreString.hpp  FString.hpp  TemplateString.hpp  TemplateString.inl
Engine/Runtime/Core/Public/Tasks/: Tasks.hpp
Engine/Runtime/Core/Public/Thread/: ThreadPool.hpp
Engine/Runtime/Core/Public/TypeUtils/: CoreType.hpp  Invoke.hpp  MemberFuncOuter.hpp
Engine/Runtime/Core/Tests/TasksTests/: TasksTest.cpp
Engine/Runtime/Core/Tests/TypeUtilsTests/: InvokeTest.cpp
Engine/Source/: Engine.cpp
Engine/Source/Benchmark/: bench_main.cpp
Engine/Source/Benchmark/graph_traversal/: omp.cpp  seq.cpp  taskflow.cpp  taskgraph.cpp
Engine/Source/ECS/: ECSCore.cpp  JobManager.cpp  SystemManager.cpp
Engine/Source/HAL/: FBaseGraphTask.cpp  FTaskGraphImpl.cpp  Runnable.cpp  RunnableThread.cpp
Engine/Source/Runtime/Core/: BUILD
Engine/Source/Runtime/Core/Public/Thread/: ThreadPool.hpp
Engine/Source/Runtime/Core/Tests/ThreadTests/: ThreadTest.cpp
Engine/Source/Utils/: utils.cpp
Engine/Tools/: BUILD  BuildMarco.bzl  cc_toolchain_config.bzl
Include/Components/: CameraComponent.hpp  InputComponent.hpp  LightComponent.hpp  MeshRenderComponent.hpp  PlayerControlComponent.hpp  TransformComponent.hpp  WindowComponent.hpp
Include/ECS/: ComponentArray.hpp  ComponentManager.hpp  ECSCore.hpp  EntityManager.hpp  EntityTypes.hpp  IComponentArray.hpp  System.hpp  SystemManager.hpp
Include/Events/: Event.hpp  EventBus.hpp
Include/Resources/: Shader.hpp  TmpVertices.hpp
Include/Systems/: CameraSystem.hpp  InputSystem.hpp  LightSystem.hpp  PlayerControlSystem.hpp  RenderSystem.hpp  WindowSystem.hpp
Include/Utils/: Log.hpp  Marco.hpp  Settings.hpp
Projects/01_LearnGL/: BUILD  MODULE.bazel  lib.cpp  lib.hpp  main.cpp
Projects/01_LearnGL/Shaders/: light.frag  object.frag
Resources/Shaders/: light.frag  object.frag  object.vert
Scripts/: dag.py  out.txt  plot.py
Source/: main.cpp
Source/Resources/: Shader.cpp
Source/Utils/: utils.cpp
backup/: main_bak.cpp  main_bak2.cpp  main_bak3.cpp  main_bak4.cpp  tmp.md
include/: camera.hpp  define.hpp  marco.hpp  material.hpp  shader.hpp  utils.hpp
res/shaders/: light.frag  object.frag  object.vert  shader.frag  shader.vert
src/: main.cpp  shader.cpp  utils.cpp
