# (A) 顶层 root 模块
module(
    name = "dev_root",
    version = "0.1",
)

# 声明依赖 engine 与 my_learngl（都 version=0.1 自己定）
bazel_dep(name = "engine", version = "0.1")
bazel_dep(name = "learngl", version = "0.1")

# 将这两个模块指向本地路径
local_path_override(
    module_name = "engine",
    path = "./Engine"  # 相对本文件的路径
)

local_path_override(
    module_name = "learngl",
    path = "./Projects/01_LearnGL"
)

# Hedron's Compile Commands Extractor for Bazel ====================================
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "0e990032f3c5a866e72615cf67e5ce22186dcb97",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)

# 缺陷： 需要声明所有子级模块的依赖，不够自动化
bazel_dep(name = "googletest", version = "1.16.0")
bazel_dep(name = "rules_cc", version = "0.1.1")