# (B) Engine 的模块声明
"""Engine module declaration and dependencies."""
module(
    name = "engine",
    version = "0.1",
)

# ruls_cc ====================================
# https://github.com/bazelbuild/rules_cc
bazel_dep(name = "rules_cc", version = "0.1.1")

# Hedron's Compile Commands Extractor for Bazel ====================================
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "0e990032f3c5a866e72615cf67e5ce22186dcb97",
)

# GoogleTest ====================================
bazel_dep(name = "googletest", version = "1.16.0")

# Platforms ====================================
# https://github.com/bazelbuild/platforms
bazel_dep(name = "platforms", version = "0.0.11")

# 注册工具链
register_toolchains(
    # 已有的 (演示)：
    "@engine//Tools:clang_suite",
    # "@engine//Tools:windows_clang_x86_64",
)
